# MatlabMatrixToEigenMatrix

./: .gitignore  CMakeLists.txt  CMakeLists.txt.example  README.md  annotated.html  classEigenToMat-members.html  classEigenToMat.html  classMatToEigen-members.html  classMatToEigen.html  classes.html  dir_56b2b5eae988eac681d7e5a6739f6fb2.html  dir_7b83104e93b8710b83b657e873b03978.html  functions.html  functions_func.html  functions_vars.html  index.html  md__home_kejia_Desktop_build-mat_to_eigen_doc_README.html  pages.html
doc/: doxygen.conf
search/: all_0.js  all_2.js  all_3.js  all_4.js  all_6.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  functions_8.js  pages_0.js  search.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
src/: eigen_to_mat.cpp  eigen_to_mat.hpp  mat_eigen_common.h  mat_to_eigen.cpp  mat_to_eigen.hpp  test.cpp
